hphp/hack/test/typecheck/fc_enum_case_6.php.new_exhaustivity.exp
ERROR: File "fc_enum_case_6.php", line 11, characters 3-118:
This `switch` statement is nonexhaustive. At least the following cases are missing: `Bar::FOO` (Typing[4019])
  File "fc_enum_case_6.php", line 11, characters 11-12:
  The scrutinee has type `Bar`.
